--- a/index.html
+++ b/index.html
@@ -1159,13 +1159,7 @@ partButtons.forEach(btn => {
   });
 });
 
-function getAccessorySummary(name){
-  const list = accRecordsByExercise[name];
-  if (!list || list.length === 0) return '기록 없음';
 
-  const latest = list[0];
-  return `${latest.weight}kg × ${latest.reps}회`;
-}
 
    
 
@@ -1940,26 +1934,7 @@ let currentExercise = null;
 
 
 
-function renderAccessorySets(exerciseName) {
-    const container = document.getElementById('acc-records');
-    const list = accRecordsByExercise[exerciseName] || [];
-    container.innerHTML = '';
 
-    if(list.length === 0){
-        container.innerHTML = `<div style="color:#777; font-size:13px;">기록 없음</div>`;
-        return;
-    }
-
-    list.forEach((set, index)=>{
-        const div = document.createElement('div');
-        div.className = 'record-day';
-        div.innerHTML = `
-            <div class="date">${set.date}</div>
-            <div class="set">${set.weight}kg × ${set.reps}회</div>
-        `;
-        container.appendChild(div);
-    });
-}
 
    
 
@@ -1988,59 +1963,29 @@ function getToday() {
 }
 
    
-function addAccessorySet() {
-  const weight = document.getElementById('acc-weight').value;
-  const reps = document.getElementById('acc-reps').value;
 
-  if (!weight || !reps) return;
-
-  const today = new Date();
-  const yyyy = today.getFullYear();
-  const mm = String(today.getMonth() + 1).padStart(2, '0');
-  const dd = String(today.getDate()).padStart(2, '0');
-  const dateStr = `${yyyy}-${mm}-${dd}`;
-
-  if (!accRecordsByExercise[currentExerciseName]) {
-    accRecordsByExercise[currentExerciseName] = [];
-  }
-
-  accRecordsByExercise[currentExerciseName].unshift({
-    date: dateStr,
-    weight: parseFloat(weight),
-    reps: parseInt(reps)
-  });
-
-  renderExercises(); // 카드 새로 렌더링
-}
 
 
 function renderAccessoryRecords() {
   const wrap = document.getElementById('acc-records');
-  wrap.innerHTML = '';
+  const list = accRecordsByExercise[currentExerciseName] || [];
 
-  const records = accessoryRecords[currentExercise];
-  const dates = Object.keys(records).sort().reverse(); // 최신 오른쪽
+  if (list.length === 0) {
+    wrap.innerHTML = `<div style="color:#777; font-size:13px;">기록 없음</div>`;
+    return;
+  }
 
-  dates.forEach(date => {
-    const col = document.createElement('div');
-    col.className = 'record-day';
-
-    col.innerHTML = `
-      <div class="date">${date}</div>
-      ${records[date].map(
-        s => `<div class="set">${s.weight}kg × ${s.reps}회</div>`
-      ).join('')}
-    `;
-
-    wrap.appendChild(col);
-  });
+  wrap.innerHTML = list.map(set => `
+    <div class="record-day">
+      <div class="date">${set.date}</div>
+      <div class="set">${set.weight}kg × ${set.reps}회</div>
+    </div>
+  `).join('');
 }
 
 
-
-
    
-function getAccessorySummary(name){
+function getAccessorySummary(name) {
   const list = accRecordsByExercise[name];
   if (!list || list.length === 0) return '기록 없음';
 
@@ -2048,33 +1993,30 @@ function getAccessorySummary(name){
   return `${latest.date} → ${latest.weight}kg × ${latest.reps}회`;
 }
 
+
    
-function addAccessorySet(){
-  if(!currentExerciseName) return;
+function addAccessorySet() {
+  if (!currentExerciseName) return;
 
-  const weight = parseInt(document.getElementById('acc-weight').value);
+  const weight = parseFloat(document.getElementById('acc-weight').value);
   const reps = parseInt(document.getElementById('acc-reps').value);
-
-  if(!weight || !reps) return;
+  if (!weight || !reps) return;
 
   const date = formatTodayYYMMDD();
 
-  if(!accRecordsByExercise[currentExerciseName]){
+  if (!accRecordsByExercise[currentExerciseName]) {
     accRecordsByExercise[currentExerciseName] = [];
   }
 
-  accRecordsByExercise[currentExerciseName].unshift({
-    date,
-    weight,
-    reps
-  });
+  accRecordsByExercise[currentExerciseName].unshift({ date, weight, reps });
 
   document.getElementById('acc-weight').value = '';
   document.getElementById('acc-reps').value = '';
 
-  renderAccessoryRecords();
-  renderExercises(); // 🔥 요약 갱신
+  renderAccessoryRecords(); // 카드 렌더
+  renderExercises();       // 요약/리스트 갱신
 }
+
 
 function renderAccessoryRecords(){
   const wrap = document.getElementById('acc-records');
@@ -2368,7 +2310,26 @@ partButtons.forEach(btn => {
   });
 });
 
+const backBtn = document.getElementById('exercise-back-btn'); // 뒤로가기 버튼 ID
+backBtn.addEventListener('click', closeExerciseDetail);
 
+function closeExerciseDetail() {
+  const detail = document.getElementById('exercise-detail-screen');
+  const exerciseScreen = document.getElementById('exercise-screen');
+  const partScreen = document.getElementById('acc-part-screen');
+
+  if(detail.style.display !== 'none'){
+    detail.style.display = 'none';
+    exerciseScreen.style.display = 'block';
+  } else {
+    // 이미 상세 화면이 아닌 경우, 파트 화면으로
+    exerciseScreen.style.display = 'none';
+    partScreen.style.display = 'block';
+  }
+}
+document.addEventListener('keydown', (e) => {
+  if(e.key === "Escape") closeExerciseDetail();
+});
 
 
    
