--- a/index.html
+++ b/index.html
@@ -922,7 +922,8 @@ input[type="number"] {
   <div class="recordFormRow">
     <input id="acc-weight" type="number" placeholder="kg">
     <input id="acc-reps" type="number" placeholder="회">
-    <button class="recordAddBtn" onclick="addAccessorySet()">저장</button>
+     <button id="add-btn" class="recordAddBtn" onclick="addAccessorySet()">저장</button>
+
 
   </div>
 
