--- a/index.html
+++ b/index.html
@@ -2157,79 +2157,51 @@ function renderExercises() {
     return;
   }
 
- // 🔥 기존 exerciseListEl.innerHTML = ... 삭제
-exerciseListEl.innerHTML = '';
+  // 기존 내용 초기화
+  exerciseListEl.innerHTML = '';
 
-// 카드 생성 + 클릭 이벤트 연결
-currentExercises.forEach(item => {
-  // item이 객체면 item.name, 아니면 item 그대로
-  const name = typeof item === 'string' ? item : item.name;
-  const safeId = `card-${name.replace(/\s+/g, '-')}`;
+  // 카드 생성 + 클릭 이벤트 연결
+  currentExercises.forEach(item => {
+    const name = typeof item === 'string' ? item : item.name;
+    const safeId = `card-${name.replace(/\s+/g, '-')}`;
 
-  const card = document.createElement('div');
-  card.className = 'exercise-card';
-  card.id = safeId;
+    const card = document.createElement('div');
+    card.className = 'exercise-card';
+    card.id = safeId;
 
-  card.innerHTML = `
-    <div class="exercise-name">${name}</div>
-    <div class="exercise-sub">${getAccessorySummary(name)}</div>
-    <button class="delete-btn" aria-label="삭제">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <line x1="3" y1="4" x2="21" y2="4"></line>
-            <line x1="8" y1="4" x2="8" y2="2"></line>
-            <line x1="16" y1="4" x2="16" y2="2"></line>
-            <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
-            <line x1="8" y1="8" x2="8" y2="20"></line>
-            <line x1="12" y1="8" x2="12" y2="20"></line>
-            <line x1="16" y1="8" x2="16" y2="20"></line>
-          </svg>
-        </button>
-  `;
+    card.innerHTML = `
+      <div class="exercise-name">${name}</div>
+      <div class="exercise-sub">${getAccessorySummary(name)}</div>
+      <button class="delete-btn" aria-label="삭제">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <line x1="3" y1="4" x2="21" y2="4"></line>
+          <line x1="8" y1="4" x2="8" y2="2"></line>
+          <line x1="16" y1="4" x2="16" y2="2"></line>
+          <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+          <line x1="8" y1="8" x2="8" y2="20"></line>
+          <line x1="12" y1="8" x2="12" y2="20"></line>
+          <line x1="16" y1="8" x2="16" y2="20"></line>
+        </svg>
+      </button>
+    `;
 
-  // 카드 클릭 시 입력창 열기
-  card.addEventListener('click', () => {
-    openExerciseDetail(name);
-  });
-
-  // 삭제 버튼
-  card.querySelector('.delete-btn').addEventListener('click', (e) => {
-    e.stopPropagation(); // 카드 클릭 이벤트 방지
-    deleteExercise(name, e);
-  });
-
-  exerciseListEl.appendChild(card);
-});
-
-}
-
-
-
-
-        
-        
-    currentExercises.forEach(item => {
-  // item이 객체면 item.name, 아니면 item 그대로
-  const name = typeof item === 'string' ? item : item.name;
-  const safeId = `card-${name.replace(/\s+/g, '-')}`;
-  const card = document.getElementById(safeId);
-  if (!card) return;
-
-  // 카드 클릭
-  card.addEventListener('click', () => openExerciseDetail(name));
-
-  // 휴지통 클릭
-  const delBtn = card.querySelector('.delete-btn');
-  if (delBtn) {
-    delBtn.addEventListener('click', (e) => {
-      e.stopPropagation(); // 카드 클릭 막기
-      deleteExercise(name);
+    // 카드 클릭 시 입력창 열기
+    card.addEventListener('click', () => {
+      openExerciseDetail(name);
     });
-  }
-});
 
+    // 삭제 버튼 클릭
+    const delBtn = card.querySelector('.delete-btn');
+    if (delBtn) {
+      delBtn.addEventListener('click', (e) => {
+        e.stopPropagation(); // 카드 클릭 이벤트 방지
+        deleteExercise(name, e);
+      });
+    }
 
-
-
+    exerciseListEl.appendChild(card);
+  });
+}
 
 // 카드 추가
 async function addExercise() {
@@ -2243,8 +2215,9 @@ async function addExercise() {
   currentExercises = accRecordsByExercise[currentPart];
   renderExercises();
 
-  await saveAccessoryRecords(); // 🔥 Firestore 저장
+  await saveAccessoryRecords(); // Firestore 저장
 }
+
 
 // 카드 삭제
 async function deleteExercise(name) {
