--- a/index.html
+++ b/index.html
@@ -1139,9 +1139,8 @@ let accRecordsByExercise = {
   "스쿼트": []
 };
 // 🔥 보조운동 "기록" 전용 저장소
-let accessoryRecords = JSON.parse(
-  localStorage.getItem('accessoryRecords') || '{}'
-);
+let accessoryRecords = JSON.parse(localStorage.getItem('accessoryRecords')) || {};
+
 
    
 
