--- a/index.html
+++ b/index.html
@@ -1130,14 +1130,7 @@ function fadeTempMsg(el, msg, timeout=1000, fadeDur=800){
    /* ===============================
    🔥 보조운동(4번째 탭) 로직
 ================================ */
-let accRecordsByExercise = {
-  // 예시
-  "벤치프레스": [
-    { date: "2026-01-24", weight: 80, reps: 8 },
-    { date: "2026-01-22", weight: 75, reps: 10 }
-  ],
-  "스쿼트": []
-};
+
 // 🔥 보조운동 "기록" 전용 저장소
 let accessoryRecords = JSON.parse(localStorage.getItem('accessoryRecords')) || {};
 
@@ -1977,31 +1970,28 @@ function getToday() {
 }
 
    
+function renderAccessoryRecords() {
+  const container = document.getElementById('accessory-record-list');
+  container.innerHTML = '';
 
+  const records = accRecordsByExercise[currentExerciseName];
+  if (!records) return;
 
-function renderAccessoryRecords(){
-  const wrap = document.getElementById('acc-records');
-  wrap.innerHTML = '';
+  records.forEach((record, index) => {
+    const card = document.createElement('div');
+    card.className = 'record-card';
 
-  if(!currentExerciseName) return;
-
-  const list = accessoryRecords[currentExerciseName] || [];
-
-  if(list.length === 0){
-    wrap.innerHTML = `<div style="color:#777;font-size:13px;">아직 기록이 없습니다</div>`;
-    return;
-  }
-
-  list.slice().reverse().forEach(r => {
-    const div = document.createElement('div');
-    div.className = 'record-day';
-    div.innerHTML = `
-      <div class="date">${r.date}</div>
-      <div class="set">${r.weight}kg × ${r.reps}회</div>
+    card.innerHTML = `
+      <div>${record.weight}kg × ${record.reps}회</div>
+      <button onclick="deleteAccessoryRecord(${index})">🗑</button>
     `;
-    wrap.appendChild(div);
+
+    container.appendChild(card);
   });
 }
+
+
+
 
 
 
