--- a/index.html
+++ b/index.html
@@ -1484,97 +1484,95 @@ googleLoginBtn.addEventListener('click', ()=>{
 });
 logoutBtn.addEventListener('click', ()=> auth.signOut());
 
-/* auth 상태 변화 */
-auth.onAuthStateChanged(async user=>{
-    if(user){
-        googleLoginBtn.style.display = 'none';
-        logoutBtn.style.display = 'block';
-        userInfo.textContent = user.displayName || user.email || '';
-        /* 🔥 [추가] 3대 기록 최신값 불러오기 */
-        try{
-            const threeSnap = await db
-              .collection('users')
-              .doc(user.uid)
-              .collection('threeRM')
-              .orderBy('createdAt', 'desc')
-              .limit(1)
-              .get();
+auth.onAuthStateChanged(async user => {
+  if (user) {
+    googleLoginBtn.style.display = 'none';
+    logoutBtn.style.display = 'block';
+    userInfo.textContent = user.displayName || user.email || '';
 
-            if(!threeSnap.empty){
-                const data = threeSnap.docs[0].data();
-                benchRM.value = data.bench || 0;
-                squatRM.value = data.squat || 0;
-                deadRM.value = data.dead || 0;
-                updateTotal3(); // 총합 갱신
-            }
-        }catch(e){
-            console.error('load threeRM err', e);
-        }
 
-        /* 기존 records 로드 (그대로 유지) */
-        try{
-            const snap = await db
-              .collection('users')
-              .doc(user.uid)
-              .collection('records')
-              .orderBy('createdAt','desc')
-              .limit(200)
-              .get();
+    /* 3대 최신값 */
+    try {
+      const threeSnap = await db
+        .collection('users')
+        .doc(user.uid)
+        .collection('threeRM')
+        .orderBy('createdAt', 'desc')
+        .limit(1)
+        .get();
 
-            records.bench = [];
-            records.squat = [];
-            records.dead = [];
-
-            snap.forEach(doc=>{
-                const d = doc.data();
-                if(!d || !d.lift) return;
-
-               const item = {
-               
-  firestoreId: doc.id,
-  date: d.date,
-  weight: d.weight,
-  reps: d.reps,
-    createdAt: d.createdAt?.toMillis?.() || 0
-};
-
-                if(d.lift === 'bench') records.bench.push(item);
-                if(d.lift === 'squat') records.squat.push(item);
-                if(d.lift === 'dead') records.dead.push(item);
-            });
-
-            renderActiveBox();
-
-        }catch(e){
-            console.error('load records err', e);
-        }
-
-    } else {
-        googleLoginBtn.style.display = 'block';
-        logoutBtn.style.display = 'none';
-        userInfo.textContent = '';
+      if (!threeSnap.empty) {
+        const data = threeSnap.docs[0].data();
+        benchRM.value = data.bench || 0;
+        squatRM.value = data.squat || 0;
+        deadRM.value = data.dead || 0;
+        updateTotal3();
+      }
+    } catch (e) {
+      console.error('load threeRM err', e);
     }
-/* 🔥 달력 데이터 로드 */
-try {
-  const snap = await db
-    .collection("users")
-    .doc(user.uid)
-    .collection("calendar")
-    .get();
 
-  calData = {};
+    /* records */
+    try {
+      const snap = await db
+        .collection('users')
+        .doc(user.uid)
+        .collection('records')
+        .orderBy('createdAt', 'desc')
+        .limit(200)
+        .get();
 
-  snap.forEach(doc => {
-    calData[doc.id] = doc.data();
-  });
+      records.bench = [];
+      records.squat = [];
+      records.dead = [];
 
-  calRender();
-} catch (e) {
-  console.error("calendar load error", e);
-}
+      snap.forEach(doc => {
+        const d = doc.data();
+        if (!d || !d.lift) return;
 
-   
+        const item = {
+          firestoreId: doc.id,
+          date: d.date,
+          weight: d.weight,
+          reps: d.reps,
+          createdAt: d.createdAt?.toMillis?.() || 0
+        };
+
+        if (d.lift === 'bench') records.bench.push(item);
+        if (d.lift === 'squat') records.squat.push(item);
+        if (d.lift === 'dead') records.dead.push(item);
+      });
+
+      renderActiveBox();
+    } catch (e) {
+      console.error('load records err', e);
+    }
+
+    /* 🔥 달력 데이터 로드 (여기로!) */
+    try {
+      const snap = await db
+        .collection("users")
+        .doc(user.uid)
+        .collection("calendar")
+        .get();
+
+      calData = {};
+      snap.forEach(doc => {
+        calData[doc.id] = doc.data();
+      });
+
+      calRender();
+    } catch (e) {
+      console.error("calendar load error", e);
+    }
+
+  } else {
+    googleLoginBtn.style.display = 'block';
+    logoutBtn.style.display = 'none';
+    userInfo.textContent = '';
+  }
 });
+
 
 
 
